relocate web types and remove sanity-codegen types

--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "sanity-nextjs-landing-pages-web",
+  "name": "studio",
   "version": "1.0.12",
   "author": "Sanity <hello@sanity.io>",
   "scripts": {
