--- a/studio/package.json
+++ b/studio/package.json
@@ -15,12 +15,15 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/dashboard": "^3.0.0",
     "@sanity/icons": "^2.0.0",
     "bcp-47": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "sanity": "^3.0.0",
+    "sanity-plugin-asset-source-unsplash": "^1.0.1",
+    "sanity-plugin-dashboard-widget-vercel": "^2.0.1",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
