--- a/web/package.json
+++ b/web/package.json
@@ -64,6 +64,7 @@
     "postcss-preset-env": "^7.3.1",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.2.0",
+    "sanity-codegen": "^0.9.8",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4"
   }
