--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
-  "name": "sanity-nextjs-landing-pages",
-  "version": "1.0.12",
+  "name": "acme-corp-demo-websites",
+  "description": "Demo websites for Acme Corp",
+  "version": "0.2.0",
   "scripts": {
     "build": "lerna run build --parallel",
     "build-web": "lerna bootstrap && (cd web && npm run build)",
@@ -15,8 +16,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@sanity/cli": "^2.30.3",
-    "eslint-plugin-n": "^15.2.4",
-    "lerna": "^5.4.1"
+    "@sanity/cli": "^2.35.0",
+    "lerna": "^5.6.2"
   }
 }
