--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "next": "^13.0.5",
     "next-sanity": "^3.1.2",
     "next-seo": "^5.1.0",
+    "next-themes": "^0.2.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
