--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,10 @@
     "@portabletext/react": "^1.0.2",
     "@sanity/client": "^3.0.3",
     "@sanity/image-url": "^1.0.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.8",
     "groq": "^2.15.0",
     "jsdom": "^20.0.3",
     "next": "^13.0.5",
