--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["next", "prettier"],
+  "extends": ["next/core-web-vitals", "prettier"],
   "plugins": ["simple-import-sort"],
   "rules": {
     "simple-import-sort/imports": "warn",
