--- a/web/package.json
+++ b/web/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-jest": "^26.8.2",
     "eslint-plugin-jest-dom": "^4.0.2",
     "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-next": "^0.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
