--- a/web/package.json
+++ b/web/package.json
@@ -37,7 +37,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-inlinesvg": "^3.0.0",
-    "react-mailchimp-form": "^1.0.2"
+    "react-mailchimp-form": "^1.0.2",
+    "remove": "^0.1.5"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.15.0",
