--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,8 @@
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
         "start": "next start",
-        "debug": "NODE_OPTIONS='--inspect' next dev"
+        "debug": "NODE_OPTIONS='--inspect' next dev",
+        "lighthouse-badges": "lighthouse-badges --urls https://acme-corp-web.vercel.app/ -o lighthouse-results -r"
     },
     "dependencies": {
         "@babel/core": "^7.20.5",
@@ -62,6 +63,7 @@
         "eslint-plugin-tailwind": "^0.2.1",
         "eslint-plugin-testing-library": "^5.6.0",
         "jest": "^28.1.3",
+        "lighthouse-badges": "^1.1.27",
         "postcss": "^8.4.16",
         "postcss-import": "^14.0.2",
         "postcss-preset-env": "^7.3.1",
