--- a/.github/workflows/lighthouse-tests.yml
+++ b/.github/workflows/lighthouse-tests.yml
@@ -1,5 +1,13 @@
 name: Lighthouse CI
-on: push
+
+on:
+  push:
+    branches: ["main"]
+  pull_request:
+    # The branches below must be a subset of the branches above
+    branches: ["main"]
+  schedule:
+    - cron: "31 8 * * 4"
 jobs:
   lighthouse:
     runs-on: ubuntu-latest
