--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "name": "web",
     "version": "1.0.12",
-    "author": "Sanity <hello@sanity.io>",
+    "author": "Bryan Hickey <bjh@bjh.dev>",
     "scripts": {
         "dev": "next",
         "build": "next build",
