--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.18.6",
+        "@next/font": "^13.0.6",
         "@portabletext/react": "^1.0.2",
         "@sanity/client": "^3.0.3",
         "@sanity/image-url": "^1.0.1",
